# logs-and-metas-for-stations

./: .gitignore  README.md  pyproject.toml
backend/: api.md
backend/backend/: settings.py  urls.py
backend/backend/v1/: urls.py
backend/base_data/: basic_info.yaml  seismic_instrument_entities.txt  stations_2019.txt  update_instrument_entities.txt
backend/basicinfo/: admin.py  forms.py  models.py
backend/basicinfo/api/v1/: serializers.py  urls.py  views.py
backend/basicinfo/management/commands/: create_stations.py
backend/basicinfo/migrations/: 0001_initial.py  0002_auto_20200229_1006.py  0003_stationstatus.py
backend/instruments/: admin.py  models.py  signals.py
backend/instruments/api/v1/: serializers.py  urls.py  views.py
backend/instruments/management/commands/: create_instrument_meta_info.py  create_or_update_seismic_entities.py
backend/instruments/migrations/: 0001_initial.py
backend/logs/: fields.py  models.py
backend/logs/api/v1/: serializers.py  urls.py  views.py
backend/logs/migrations/: 0001_initial.py  0002_auto_20200224_1438.py  0003_auto_20200229_1006.py  0004_delete_stationstatus.py
